fix: update method calls and improve type handling in connection classes